@@ -391,6 +391,17 @@
       </component>
     </version>
   </module>
+  <module name="evolution-jescs">
+    <version release="gnome-2.8">
+      <component name="evolution-jescs" dir="evolution-jescs" group="extras">
+	<podir dir="po"/>
+	<potname name="evolution-jescs-1.0.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+  </module>
   <module name="evolution-webcal">
     <version release="gnome-2.8">
       <component name="evolution-webcal" dir="evolution-webcal" group="proposed">
@@ -1707,17 +1718,6 @@
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
-      </component>
-    </version>
-  </module>
-  <module name="hydrogen">
-    <version release="gnome-2.8">
-      <component name="hydrogen" dir="hydrogen" group="extras">
-	<podir dir="po"/>
-	<potname name="hydrogen-1.0.pot"/>
-	<branch name="HEAD"/>
-	<regenerate/>
-	<download/>
       </component>
     </version>
   </module>
