@@ -1,3 +1,7 @@
+2004-07-01  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: Hydrogen was renamed evolution-jescs.
+
 2004-06-29  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Added evolution-brainread.
